grammar.js
    source_file: ($) =>
      repeat(
        seq(
          choice($._top_level_declaration, $._statement),
          optional(terminator)
        )
      ),

    _top_level_declaration: ($) =>
      choice(
        $.const_declaration,
        $.global_var_declaration,
        $._c_directive,
        $.function_declaration,
        $.type_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.interface_declaration,
        $.import_declaration,
        $.module_clause
      ),

    _expression: ($) =>
      choice(
        $._single_line_expression,
        $.type_initializer,
        $.array,
        $.fixed_array,
        $.unary_expression,
        $.binary_expression,
        $.in_expression,
        $.is_expression,
        $.selector_expression,
        $.index_expression,
        $.slice_expression,
        $.type_cast_expression,
        $.as_type_cast_expression,
        $.call_expression,
        $.special_call_expression,
        $.fn_literal,
        $.selector_expression,
        $._expression_with_blocks
      ),

    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(
          field("operator", choice(...unary_operators)),
          field("operand", choice($._expression))
        )
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.multiplicative, choice(...multiplicative_operators)],
        [PREC.additive, choice(...additive_operators)],
        [PREC.comparative, choice(...comparative_operators)],
        [PREC.and, "&&"],
        [PREC.or, "||"],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression)
            )
          )
        )
      );
    },

    as_type_cast_expression: ($) => seq($._expression, as_keyword, $._type),

    call_expression: ($) =>
      prec.right(
        PREC.comparative,
        seq(
          field(
            "function",
            choice(
              $.identifier,
              $.binded_identifier,
              $.comptime_identifier,
              $.selector_expression,
              $.comptime_selector_expression
            )
          ),
          field("type_parameters", optional($.type_parameters)),
          field("arguments", $.argument_list),
          optional($.option_propagator)
        )
      ),

    special_argument_list: ($) =>
      seq(
        "(",
        choice($._simple_type, $.option_type),
        optional(seq(",", $._expression)),
        ")"
      ),

    special_call_expression: ($) =>
      prec.right(
        PREC.comparative,
        seq(
          field("function", choice($.identifier, $.selector_expression)),
          field("arguments", $.special_argument_list),
          optional($.option_propagator)
        )
      ),

    option_propagator: ($) => prec.right(choice(token("?"), $.or_block)),

    or_block: ($) => seq("or", $.block),

    _single_line_expression: ($) =>
      prec.left(
        PREC.resolve,
        choice(
          $.identifier,
          $.int_literal,
          $._string_literal,
          $.rune_literal,
          $.pseudo_comptime_identifier,
          $.type_selector_expression,
          $.none,
          $.true,
          $.false
        )
      ),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    comment: ($) =>
      token(
        choice(seq("//", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))
      ),

    true: ($) => "true",
    false: ($) => "false",

    type_initializer: ($) =>
      prec(
        PREC.composite_literal,
        seq(
          field(
            "type",
            choice(
              $.builtin_type,
              $.type_identifier,
              $.type_placeholder,
              $.generic_type,
              $._binded_type,
              $.qualified_type,
              $.pointer_type,
              $.array_type,
              $.fixed_array_type,
              $.map_type,
              $.channel_type
            )
          ),
          field("body", $.literal_value)
        )
      ),

    literal_value: ($) =>
      seq(
        "{",
        repeat(
          seq(
            choice($.keyed_element, alias($._element, $.element)),
            optional(choice(",", terminator))
          )
        ),
        "}"
      ),

    keyed_element: ($) =>
      seq(
        prec(
          PREC.resolve,
          field(
            "name",
            seq(
              choice($._field_identifier, $._string_literal),
              token.immediate(":")
            )
          )
        ),
        field("value", $._element)
      ),

    _element: ($) =>
      prec(
        PREC.resolve,
        choice(
          $._expression,
          $.unsafe_expression,
          $.if_expression,
          $.comptime_if_expression,
          $.match_expression,
          $.lock_expression,
          $.sql_expression
        )
      ),

    fixed_array_indicator: ($) => token(fixed_array_symbol),

    array: ($) => choice(token("[]"), $._non_empty_array),

    fixed_array: ($) =>
      prec.right(
        PREC.resolve,
        seq($._non_empty_array, $.fixed_array_indicator)
      ),

    _non_empty_array: ($) =>
      seq(
        "[",
        field("values", repeat1(seq($._expression, optional(",")))),
        "]"
      ),

    array_type: ($) =>
      prec(PREC.resolve, seq("[]", field("element", $._simple_type))),

    variadic_type: ($) => seq("...", $._simple_type),

    pointer_type: ($) => prec(PREC.unary, seq("&", $._simple_type)),

    int_literal: ($) => token(int_literal),

    _string_literal: ($) => choice($.interpreted_string_literal),

    interpreted_string_literal: ($) => quoted_string($, $.string_interpolation),

    string_interpolation: ($) =>
      choice(
        seq("${", $._expression, optional($.format_specifier), "}"),
        seq("$", $._single_line_expression)
      ),

    identifier: ($) =>
      token(
        seq(
          choice(unicode_letter_lower, "_"),
          repeat(choice(letter, unicode_digit))
        )
      ),

    _mutable_identifier: ($) => seq(mut_keyword, $.identifier),

    identifier_list: ($) =>
      prec(
        PREC.primary,
        comma_sep1(choice($.identifier, $._mutable_identifier))
      ),

    expression_list: ($) =>
      prec(PREC.resolve, comma_sep1(choice($._expression))),

    parameter_declaration: ($) =>
      seq(
        optional(mut_keyword),
        field("name", $.identifier),
        field("type", choice($._simple_type, $.option_type, $.variadic_type))
      ),

    parameter_list: ($) => seq("(", comma_sep($.parameter_declaration), ")"),

    argument_list: ($) => seq("(", comma_sep($._expression), ")"),

    _type: ($) => choice($._simple_type, $.option_type, $.multi_return_type),

    option_type: ($) =>
      prec.right(
        seq("?", optional(choice($._simple_type, $.multi_return_type)))
      ),

    multi_return_type: ($) => seq("(", comma_sep1($._simple_type), ")"),

    _simple_type: ($) =>
      choice(
        $.builtin_type,
        $.type_identifier,
        $.type_placeholder,
        $._binded_type,
        $.qualified_type,
        $.pointer_type,
        $.array_type,
        $.function_type
      ),

    type_parameters: ($) =>
      prec(
        PREC.resolve,
        seq(
          token.immediate("<"),
          comma_sep1($._simple_type),
          token.immediate(">")
        )
      ),

    builtin_type: ($) => choice(...builtin_type_keywords),

    _binded_type: ($) => alias($.binded_identifier, $.binded_type),

    qualified_type: ($) =>
      seq(
        field("module", $._module_identifier),
        token.immediate("."),
        field("name", $.type_identifier)
      ),

    type_identifier: ($) =>
      token(seq(unicode_letter_upper, repeat1(choice(letter, unicode_digit)))),

    _module_identifier: ($) => alias($.identifier, $.module_identifier),

    _field_identifier: ($) => alias($.identifier, $.field_identifier),

    _statement_list: ($) =>
      seq(
        $._statement,
        repeat(seq(optional(terminator), $._statement)),
        optional(terminator)
      ),

    _statement: ($) =>
      choice(
        $._simple_statement,
        $.assert_statement,
        $.return_statement,
        $.asm_statement,
        $.go_statement,
        $.goto_statement,
        $.labeled_statement,
        $.empty_labeled_statement,
        $.defer_statement,
        $.for_statement,
        $.comptime_for_statement,
        $.send_statement
      ),

    _simple_statement: ($) =>
      choice(
        $._expression,
        $.inc_statement,
        $.dec_statement,
        $.assignment_statement,
        $.short_var_declaration
      ),

    inc_statement: ($) => seq($._expression, "++"),

    dec_statement: ($) => seq($._expression, "--"),

    short_var_declaration: ($) => assignment_statement_support($, ":="),

    assignment_statement: ($) =>
      assignment_statement_support($, choice(...assignment_operators)),

    block: ($) => seq("{", optional($._statement_list), "}"),

    defer_statement: ($) => seq(defer_keyword, $.block),

    unsafe_expression: ($) => seq(unsafe_keyword, $.block),

    function_declaration: ($) =>
      prec.right(
        seq(
          field("attributes", optional($.attribute_list)),
          optional(pub_keyword),
          fn_keyword,
          field("receiver", optional($.parameter_list)),
          field("langauge", optional($.language_spec)),
          field("name", choice($.identifier, $.overloadable_operator)),
          field("type_parameters", optional($.type_parameters)),
          field("parameters", $.parameter_list),
          field("result", optional($._type)),
          field("body", optional($.block))
        )
      ),

    function_type: ($) =>
      prec.right(
        seq(
          "fn",
          field("parameters", $.parameter_list),
          field("result", optional($._type))
        )
      ),

    fn_literal: ($) =>
      seq(
        "fn",
        field("parameters", $.parameter_list),
        field("result", optional($._type)),
        field("body", $.block)
      ),

    global_var_declaration: ($) =>
      seq(
        global_keyword,
        choice(
          $._global_var_spec,
          $.global_var_type_initializer,
          seq(
            "(",
            repeat(
              seq(
                choice($._global_var_spec, $.global_var_type_initializer),
                terminator
              )
            ),
            ")"
          )
        )
      ),

    _global_var_spec: ($) => alias($.const_spec, $.global_var_spec),

    global_var_type_initializer: ($) =>
      seq(field("name", $.identifier), field("type", $._type)),

    const_declaration: ($) =>
      seq(
        optional(pub_keyword),
        const_keyword,
        choice(
          $.const_spec,
          seq("(", repeat1(seq($.const_spec, terminator)), ")")
        )
      ),

    const_spec: ($) =>
      seq(field("name", $.identifier), "=", field("value", $._expression)),

    return_statement: ($) =>
      prec.left(seq(return_keyword, optional(choice($._expression)))),

    type_declaration: ($) =>
      seq(
        optional(pub_keyword),
        type_keyword,
        field("name", $.type_identifier),
        "=",
        field("types", $.type_list)
      ),

    type_list: ($) =>
      seq($._simple_type, repeat(seq("|", $._simple_type))),

    empty_labeled_statement: ($) =>
      seq(field("label", alias($.identifier, $.label_name)), ":"),

    for_statement: ($) =>
      seq(
        for_keyword,
        optional(
          choice(
            $.for_in_operator,
            $._expression, // condition-based for
            $.cstyle_for_clause
          )
        ),
        field("body", $.block)
      ),

    comptime_for_statement: ($) =>
      seq("$for", $.for_in_operator, field("body", $.block)),

    for_in_operator: ($) =>
      prec(
        PREC.primary,
        seq(
          field("left", $.identifier_list),
          in_keyword,
          field("right", choice($._expression, alias($._range, $.range)))
        )
      ),

    _range: ($) =>
      prec.right(
        PREC.multiplicative,
        choice(
          seq(field("start", $._expression), "..", field("end", $._expression)),
          seq(
            field("start", $._expression),
            "..",
            field("end", optional($._expression))
          ),
          seq(
            field("start", optional($._expression)),
            "..",
            field("end", $._expression)
          )
        )
      ),

    selector_expression: ($) =>
      prec(
        PREC.primary,
        seq(
          field("operand", $._expression),
          token.immediate("."),
          field(
            "field",
            choice(
              $.identifier,
              $.comptime_identifier,
              $.selector_expression,
              $.comptime_selector_expression
            )
          )
        )
      ),

    index_expression: ($) =>
      prec.right(
        PREC.primary,
        seq(
          field("operand", $._expression),
          "[",
          field("index", $._expression),
          "]",
          optional($.option_propagator)
        )
      ),

    slice_expression: ($) =>
      prec(
        PREC.primary,
        seq(field("operand", $._expression), "[", $._range, "]")
      ),

    cstyle_for_clause: ($) =>
      prec.right(
        seq(
          field("initializer", optional($._simple_statement)),
          ";",
          field("condition", optional($._expression)),
          ";",
          field("update", optional($._simple_statement))
        )
      ),

    _comptime_block: ($) =>
      seq(
        "{",
        optional(
          repeat(
            seq(choice($._statement, $._c_directive), optional(terminator))
          )
        ),
        "}"
      ),

    comptime_if_expression: ($) =>
      seq(
        "$if",
        field(
          "condition",
          choice(
            seq($.identifier, optional("?")),
            alias($._generic_type_is_expression, $.is_expression),
            $._expression
          )
        ),
        field("consequence", alias($._comptime_block, $.block)),
        optional(
          seq(
            "$else",
            field(
              "alternative",
              choice(
                alias($._comptime_block, $.block),
                $.comptime_if_expression
              )
            )
          )
        )
      ),

    if_expression: ($) =>
      seq(
        "if",
        choice(
          field("condition", $._expression),
          field("initializer", $.short_var_declaration)
        ),
        field("consequence", $.block),
        optional(
          seq("else", field("alternative", choice($.block, $.if_expression)))
        )
      ),

    in_expression: ($) =>
      prec.left(
        PREC.comparative,
        seq(
          field("left", $._expression),
          choice(in_keyword, "!" + in_keyword),
          field("right", $._expression)
        )
      ),

    _generic_type_is_expression: ($) =>
      prec.left(
        PREC.comparative,
        seq(
          field("left", $.type_placeholder),
          choice(is_keyword, "!" + is_keyword),
          field("right", choice($.option_type, $._simple_type))
        )
      ),

    is_expression: ($) =>
      prec.left(
        PREC.comparative,
        seq(
          field("left", $._expression),
          choice(is_keyword, "!" + is_keyword),
          field("right", choice($.option_type, $._simple_type))
        )
      ),

    attribute_declaration: ($) =>
      seq("[", seq($.attribute_spec, repeat(seq(";", $.attribute_spec))), "]"),

    attribute_list: ($) =>
      repeat1(seq($.attribute_declaration, optional(terminator))),
