test/corpus/assignment_statement.txt
===
Assignment Statement
===

fn main() {
  a = 1
  a := 1
  a, b = 1, 2
  a, b := 1, 2
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (assignment_statement
        (identifier_list
          (identifier))
        (expression_list
          (int_literal)))
      (short_var_declaration
        (identifier_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (identifier_list
          (identifier)
          (identifier))
        (expression_list
          (int_literal)
          (int_literal)))
      (short_var_declaration
        (identifier_list
          (identifier)
          (identifier))
        (expression_list
          (int_literal)
          (int_literal))))))

===
Pointer Assignment
===


unsafe {
	*ap = size
}


---

(source_file
  (unsafe_expression
    (block
      (assignment_statement
        (identifier_list
          (unary_expression
            (identifier)))
        (expression_list
          (identifier))))))
