test/corpus/cast_expression.txt
==
Cast Expression
===

fn main() {
  t := &char(charp)
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (short_var_declaration
        (identifier_list (identifier))
        (expression_list
          (unary_expression
            (call_expression
              (identifier)
              (argument_list (identifier)))))))))
