test/corpus/comptime_for_statement.txt
===
Comptime For Statement
===

$for field in App.fields {
  println(field)
}

---

(source_file
  (comptime_for_statement
    (for_in_operator
      (identifier_list (identifier))
      (selector_expression (identifier) (identifier)))
    (block
      (call_expression
        (identifier)
        (argument_list (identifier))))))
