test/corpus/comptime_if_expression.txt
===
Comptime If Expression
===

$if windows {}

$if gc_boehm ? {} $else $if foo {} $else {}

$if T is foo {}

---

(source_file 
  (comptime_if_expression 
    (identifier) (block)) 
  (comptime_if_expression 
    (identifier) 
    (block) 
    (comptime_if_expression 
      (identifier) 
      (block) 
      (block))) 
    (comptime_if_expression 
      (relational_operator 
        (identifier) (identifier)) 
      (block)))
