test/corpus/defer_statement.txt
===
Defer Statement
===

fn main() {
  defer {
    something.lol()
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (defer_statement
        (block
          (call_expression 
            (selector_expression (identifier) (identifier)) 
            (argument_list)))))))
