test/corpus/empty_labeled_statement.txt
===
Empty Labeled Statement
===

fn main() {
  label:
}

---

(source_file 
  (function_declaration 
    (identifier) 
    (parameter_list) 
    (block 
      (empty_labeled_statement (label_name)))))
