test/corpus/for_statement_cstyle.txt
===
C-Style For Statement
===

fn main() {
  for i := 0; i < 10; i++ {
    println(i)
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (for_statement
        (cstyle_for_clause
          (short_var_declaration
            (expression_list (identifier))
            (int_literal))
          (binary_expression (identifier) (int_literal))
          (inc_statement (identifier)))
        (block
          (call_expression 
            (identifier)
            (argument_list (identifier))))))))
