test/corpus/for_statement_in.txt
===
For-in Statement
===

fn main() {
  for v in arr {}
  for k, v in mp {}
  for i in 0 .. 10 {}
}
---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (for_statement
        (in_operator
          (expression_list (identifier))
          (identifier))
        (block))
      (for_statement
        (in_operator
          (expression_list (identifier) (identifier))
          (identifier))
          (block))
      (for_statement
        (in_operator
          (expression_list (identifier))
          (range (int_literal) (int_literal)))
        (block)))))
