test/corpus/function_declaration_generic.txt
===
Generic function Declaration
===

fn hello_world<T>(mut s []T, i int, words ...Text) ? {}

---

(source_file
  (function_declaration
    (identifier)
    (type_parameters (type_identifier))
    (parameter_list
      (parameter_declaration
        (identifier) 
        (array_type (type_identifier)))
      (parameter_declaration (identifier) (type_identifier))
      (parameter_declaration 
        (identifier) 
        (variadic_type (type_identifier))))
    (option_type)
    (block)))
