test/corpus/if_expression_is.txt
===
If Expression is guard
===

fn main() {
  if var is string {
    // do something
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (if_expression
        (relational_operator (identifier) (identifier))
        (block (comment))))))
