test/corpus/import_declaration_symbols.txt
===
Import declaration with selected symbols
===

import json { decode, encode, Any }

---

(source_file
  (import_declaration
      (import_path (identifier))
      (import_symbols 
        (import_symbols_list
          (identifier) 
          (identifier) 
          (identifier)))))
