test/corpus/interface_declaration.txt
===
Interface declaration
===

interface Speaker {
  speak()
mut:
  speak_message(name string) string
}

---

(source_file
  (interface_declaration
    (type_identifier)
    (interface_spec_list
      (interface_spec (field_identifier) (parameter_list))
      (interface_field_scope)
      (interface_spec 
        (field_identifier)
        (parameter_list
          (parameter_declaration (identifier) (builtin_type)))
        (builtin_type)))))
