test/corpus/interpreted_string_literal_interp.txt
===
Interpreted String Literal with Interpolation
===

const a = 'Hello $world! ${hello.hey} ${path.join('')}'

---

(source_file
  (const_declaration
    (const_spec 
      (identifier) 
      (interpreted_string_literal
        (string_interpolation (identifier))
        (string_interpolation
          (selector_expression 
            (identifier) (identifier))) 
        (string_interpolation 
          (call_expression 
            (selector_expression 
              (identifier) (identifier)) 
            (argument_list (interpreted_string_literal))))))))
