test/corpus/multi_return_type.txt
===
Multi-return type
===

fn hello() (string, string) {}
fn hello2() ?(int, f32) {}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (multi_return_type
      (type_identifier) (type_identifier))
    (block))
  (function_declaration
    (identifier)
    (parameter_list)
    (option_type
      (multi_return_type
        (type_identifier) (type_identifier)))
    (block)))
