test/corpus/selector_expression.txt
===
Selector Expression
===

fn main() {
  test.foo
  hello := world.bar
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (selector_expression
        (identifier) (identifier))
      (short_var_declaration
        (expression_list (identifier))
        (expression_list
          (selector_expression
            (identifier) (identifier)))))))
