test/corpus/slice_expression.txt
===
Slice Expression
===

fn main() {
  hello[0..1]
  hello[..1]
  hello[0..]
  hello[wat+1..]
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (slice_expression 
        (identifier) 
        (range (int_literal) (int_literal)))
      (slice_expression 
        (identifier) 
        (range (int_literal)))
      (slice_expression 
        (identifier) 
        (range (int_literal)))
      (slice_expression 
        (identifier) 
        (range (binary_expression (identifier) (int_literal)))))))